examples/error/NoMain.c
int funzione(){
	int a;

	a = (int)5.4;	
}
